--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,9 @@
+defaultTasks 'jar'
+
 apply plugin: 'java'
+
+sourceCompatibility = 1.8
+version = '1.0'
 
 dependencies {
     compile files('lib/resources.jar')
